# kimchi-lander-sim-2d

./: .gitignore  README.md  package.json  pyproject.toml
.github/workflows/: ci.yml
.omx/context/: desktop-grade-2d-rocket-lander-sim-20260410T063446Z.md
.omx/plans/: prd-2d-rocket-lander-sim.md  test-spec-2d-rocket-lander-sim.md
electron-app/: index.html  package-lock.json  package.json  vite.config.js
electron-app/electron/: main.mjs  preload.cjs  preload.mjs
electron-app/scripts/: dev.mjs
electron-app/src/: App.jsx  styles.css
electron-app/src/app/: AppShell.jsx  useLanderDesktop.js  usePlayback.js
electron-app/src/components/: LineChart.jsx  MetricStrip.jsx  SceneView.jsx
scripts/: bootstrap.sh  electron-smoke.mjs  start-app.mjs  start-app.sh
src/lander_sim/: __init__.py  __main__.py  app.py  bridge.py
src/lander_sim/control/: __init__.py  actuator_allocator.py  guidance.py  pid_controller.py  state_space_controller.py
src/lander_sim/data/: __init__.py
src/lander_sim/dynamics/: __init__.py  disturbances.py  integrators.py  linearization.py  parameters.py  state.py  vehicle_model.py
src/lander_sim/simulation/: __init__.py  analytics.py  history.py  runner.py  scenarios.py
src/lander_sim/ui/: __init__.py  main_window.py  playback_controller.py  scene_renderer.py  (+2 more)
tests/: conftest.py  test_analytics.py  test_bridge.py  test_cli_entrypoint.py  test_guidance.py  test_integrators.py  test_linearization.py  test_pid_controller.py  test_preset_data.py  test_runner.py  test_smoke_ui.py  test_state_space_controller.py  test_vehicle_model.py
(+34 files in other folders)
